# hap-eval

./: .gitignore  .gitmodules  README.md  hap_eval.py  requirements.txt  setup.cfg
data/: Homo_sapiens_HG38_tandem_repeats.bed
hap_eval/: __init__.py  hap_eval.py
scripts/: cleanup_vcf.py
src/: __init__.py  hap_eval.py
tests/: test_vcfevaluator.py
