[metadata]
name = sentieon-hap-eval
version = 0.0.1a1
author = Sentieon Inc.
author_email = support@sentieon.com
description = A VCF comparison engine for structural variant benchmarking
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/sentieon/hap-eval
project_urls =
    Bug Tracker = https://github.com/sentieon/hap-eval/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    hap_eval = src
    vcflib = vcflib/vcflib
packages =
    hap_eval
    vcflib
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*
install_requires =
    python-Levenshtein

[options.entry_points]
console_scripts =
    hap_eval = hap_eval:main
